# icfpc19

./: CMakeLists.txt  cMap.cpp  cMap.h  cStrategy.cpp  cStrategy.h  cWorker.cpp  cWorker.h  icfpc19.cbp  main.cpp  main.h  run_solver.sh  run_solver_pool.sh
